# amk

./: .gitignore  Cargo.toml
src/: main.rs
src/exec/: loop_impl.rs  loops.rs  manager.rs  mod.rs  mode.rs  msg.rs  runner.rs
src/graphics/: context.rs  mod.rs
src/graphics/renderers/: triangle.rs
src/logging/: mod.rs
src/scenes/: root.rs
src/scenes/common/: close_window.rs  mod.rs  resize_window.rs
src/utils/: clock.rs  mod.rs  sync.rs
